--- a/package.json
+++ b/package.json
@@ -4,18 +4,34 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "express-validator": "^6.13.0",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.2",
+    "sequelize": "^6.7.0",
+    "sequelize-cli-typescript": "^3.2.0-c",
+    "sequelize-typescript": "^2.1.1",
+    "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.1",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13"
+    "@types/es6-promise": "^3.3.0",
+    "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/node": "^16.11.2",
+    "@types/sequelize": "^4.28.10",
+    "typescript": "^4.4.4"
   },
   "scripts": {
-    "start": "ts-node-dev ./index.ts"
+    "start": "ts-node-dev ./src/index.ts"
   },
   "author": "",
   "license": "ISC"
